Feat : 메인 페이지에서 내가 속하지 않은 그룹만 표시 - 로그인 후 메인페이지 접근 시, 그룹 둘러보기 창에 내가 속하지 않은 그룹만 표시되게 변경